# smart-greenhouse-irrigation-system

./: README.md
arduino/: platformio.ini
arduino/SistemaRiego/: platformio.ini
arduino/SistemaRiego/include/: ControladorSensores.h  ControladorTiempo.h  Manometro.h  Tanque.h  ValvulaEstado.h
arduino/SistemaRiego/src/: ControladorComunicacionConRaspberry.cpp  ControladorSensores.cpp  Manometro.cpp  Tanque.cpp  ValvulaOnOff.cpp  main.cpp
arduino/include/: Bomba.h  ControladorComunicacionConRaspberry.h  ControladorRiego.h  ControladorTiempo.h  Horario.h  Manometro.h  Tanque.h  ValvulaEstado.h  ValvulaOnOff.h
arduino/src/: Bomba.cpp  ControladorRiego.cpp  ControladorSensores.cpp  ControladorTiempo.cpp  Horario.cpp  Manometro.cpp  Tanque.cpp  ValvulaEstado.cpp  ValvulaOnOff.cpp  main.cpp
raspberry/: .env.example  .gitignore  pyproject.toml
raspberry/src/raspberry/: config.py  data_filter.py  database_writer.py  env.py  main.py  mqtt_listener.py  serial_listener.py
raspberry/test/: import serial.py  prueba.py  test_mqtt_publisher.py  test_mqtt_suscriber.py
