[project]
name = "raspberry"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "aioserial (>=1.3.1,<2.0.0)",
    "aiomqtt (>=2.4.0,<3.0.0)",
    "pymongo (>=4.15.4,<5.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pyserial (>=3.5,<4.0)"
]

[tool.poetry]
name = "raspberry"
version = "0.1.0"
description = "Smart greenhouse irrigation system client"
authors = ["Esteban Castro"]
packages = [
    { include = "raspberry", from = "src" }
]

[tool.poetry.scripts]
raspberry = "raspberry.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
